Used cropped image instead of one with title.

--- a/main.tex
+++ b/main.tex
@@ -71,7 +71,7 @@ Generally speaking, botnets conform to the analogy of a bank robbery: first, the
 \cite{wikipedia:phishing}.  On the other hand, botnets that use trojan-horses like Zeus collect sensitive information from victims by injecting web content into otherwise secure websites, keylogging, and remote access\cite{defcon:javascript}
 \cite{blackhat:zeus}
 \cite{defcon:spam}
-\cite{wikipedia:trojan}. In most schemes, information and commands are exchanged between the harvester bots (which collect information) and the botmaster through an impure peer-to-peer network through the use of relay nodes and proxy servers. Innovative schemes, such as the VOIP botnet proposed by Itzik Kotler et. al of Security Art, would improve on the traditional botnet model by eliminating the need to exfiltrate data to a central server\cite{defcon:voip}.
+\cite{wikipedia:trojan}. In most schemes, information and commands are exchanged between the harvester bots (which collect information) and the botmaster through an impure peer-to-peer network through the use of relay nodes and proxy servers. Innovative schemes, such as the VOIP botnet proposed by Itzik Kotler et al. of Security Art, would improve on the traditional botnet model by eliminating the need to exfiltrate data to a central server\cite{defcon:voip}.
 
 Our objective in this paper is to explain the way in which bot programs are implemented, with the hope that future development can address each of the weaknesses they rely on for their continued existence.  In this paper, we examine features across all stages of the bot program, as implemented by real botnets such as Zeus and ZeroAccess.
 
@@ -152,7 +152,7 @@ Due to the prominence of IRC as a method for botnets to communicate, many corpor
 
 HTTP is often combined with peer-to-peer networking in a \emph{gossip protocol}. This kind of protocol relies on nodes passing on information that is learned to other nodes, thereby propagating it throughout the network. Gossip protocols are employed by peer-to-peer botnets \cite{defcon:prowling}, but can be utilized by hierarchical command and control botnets as well. Due to the need for communication to spread by nodes, the propagation speed is usually slower than direct messaging. However in larger botnets, this reduces the strain on the central C\&C server by delegating the command passing to other bots; it also has the effect of diffusing traffic throughout the botnet, thereby improving the network's overall resilience and reducing the likelihood that the botnet will be detected.
 
-Ollmann et. al classified gossip-based C\&C botnets into several topological groups\cite{ollmann:topology}, some of which appear to have counterparts to the IRC substructures. One of these is called the \emph{Star topology}. In this setup, each bot communicates directly with a single, centralized C\&C server. Another topology, similar to the idea of bridged botnets, is the multi-server C\&C topology. As the name implies, this method introduces several servers that act as command and control servers to the botnet. In a hierarchical topology, bots are organized in a hierarchy, and bots that are higher up in the hierarchy can issue commands to bots further down in the tree.
+Ollmann et al. classified gossip-based C\&C botnets into several topological groups\cite{ollmann:topology}, some of which appear to have counterparts to the IRC substructures. One of these is called the \emph{Star topology}. In this setup, each bot communicates directly with a single, centralized C\&C server. Another topology, similar to the idea of bridged botnets, is the multi-server C\&C topology. As the name implies, this method introduces several servers that act as command and control servers to the botnet. In a hierarchical topology, bots are organized in a hierarchy, and bots that are higher up in the hierarchy can issue commands to bots further down in the tree.
 
 \section{How Data is Exfiltrated from Harvester Bots}
 %Evolution of Collection/Anonymity (the getaway car)
@@ -168,7 +168,7 @@ There are several alternative methods as well. Several botnets, such as Mevade (
 
 The reason for the attention on this botnet was due to the sudden increase in traffic within the Tor network after Mevade changed their communication methods \cite{darkreading:tor}. Evidently botnets risk detection if they cause too much suspicious network traffic, and so should have design considerations to that end. Most botnets are programmed so that an individual bot does not perform any actions without instructions from the botmaster\cite{honeynet:appendix}. 
 
-As another example of minimizing suspicious traffic, a commercial botnet was developed to buy cars included error validation functions\cite{defcon:cars}. This functionality was added to avoid an IP ban from server administrators; had there been no error validation, the server administrators could’ve potentially noticed that a large amount of invalid traffic was being generated from a single IP address.
+As another example of minimizing suspicious traffic, a commercial botnet was developed to buy cars included error validation functions\cite{defcon:cars}. This functionality was added to avoid an IP ban from server administrators; had there been no error validation, the server administrators could have potentially noticed that a large amount of invalid traffic was being generated from a single IP address.
 
 Recently, researchers identified the potential for VOIP-based botnets.  VOIP, or voice over IP, is a protocol used for performing phone and conference calls over the internet.  A VOIP-based botnet could leverage any unused conference call numbers in order to exfiltrate data by phone.  By using digital-tone multi-frequency signalling as a means of encoding and decoding between binary and sound, hackers would be utilize the channel in the same way that IP uses bytes.  In addition to providing the botmaster with an anonymous form of communication, VOIP botnets:
 
@@ -220,7 +220,7 @@ Common disruption techniques include sinkholing (in which bots are redirected to
 \item Fallback Prevention - many botnets have mechanisms that allow the bots to communicate directly with the command and control center in the event of a sinkhole attack.  Attackers must somehow disable the fallback channel or prevent bots from entering their fallback mode.
 \end{itemize}
 
-Botnets in the wild have employed a number of defenses against sinkhole attacks.  For example, the Sality botnet uses a reputation scheme in which each bot keeps track of the reputation of its neighbouring peers; reputation is increased by correctly responding to requests, and decreased by incorrectly responding to requests. Peers shared their peer lists only with other machines with high reputation, and only allow peer list entries with low reputations to be overwritten. Stone Gross et. al reverse-engineered the protocol to the extent that they could create their own high-reputation node, and they found ways to poison existing high-reputation nodes by overwriting their port numbers \cite{stone:p2p}.
+Botnets in the wild have employed a number of defenses against sinkhole attacks.  For example, the Sality botnet uses a reputation scheme in which each bot keeps track of the reputation of its neighbouring peers; reputation is increased by correctly responding to requests, and decreased by incorrectly responding to requests. Peers shared their peer lists only with other machines with high reputation, and only allow peer list entries with low reputations to be overwritten. Stone Gross et al. reverse-engineered the protocol to the extent that they could create their own high-reputation node, and they found ways to poison existing high-reputation nodes by overwriting their port numbers \cite{stone:p2p}.
 
 On the other hand, the Zeus network uses a different scheme to prevent and mitigate sinkholing. Zeus bots announce their presence by sending requests to other bots on their peer list; upon receiving a request, Zeus bots add the source to its peer list if it knows fewer than 50 peers.  Zeus accounts for IP churn by assigning unique IDs to each bot, and updating the IP address whenever it receives an update for the bot identified with an ID it knows about.  Zeus mitigates the effect of spoofing through the use of an automated IP-based blacklist, which blocks IP addresses with high request rates \cite{stone:p2p}.
 
@@ -231,7 +231,7 @@ Domain generation algorithms, also known as domain flux and fast flux, grant bot
 
 \subsection{Mathematical Underpinning of Botnets}
 
-Researchers have proposed a variety of metrics for quantitatively measuring the robustness and efficiency of botnets.  Both attributes matter from a security perspective: efficient botnets produce less traffic, and therefore go undetected for longer.  The robustness of the network, on the other hand, is the major aim of peer-to-peer network structures such as those implemented for botnets such as Zeus and ZeroAccess.  Botnets routinely gain and lose new members over time; a higher degree of connections between bots provides fault tolerance and recovery, as well as resilience against attacks such as sinkholing\cite{botnet:metrics}.  Dagon et. al proposed a number of metrics for measuring the robustness of a botnet, such as the following:
+Researchers have proposed a variety of metrics for quantitatively measuring the robustness and efficiency of botnets.  Both attributes matter from a security perspective: efficient botnets produce less traffic, and therefore go undetected for longer.  The robustness of the network, on the other hand, is the major aim of peer-to-peer network structures such as those implemented for botnets such as Zeus and ZeroAccess.  Botnets routinely gain and lose new members over time; a higher degree of connections between bots provides fault tolerance and recovery, as well as resilience against attacks such as sinkholing\cite{botnet:metrics}.  Dagon et al. proposed a number of metrics for measuring the robustness of a botnet, such as the following:
 
 \begin{itemize}
 \item inverse geodesic distance (a normalized measurement which reflects the overall connectivity of the botnet network topology)
