More typo fixes, added pdf to eliminate need to compile.

--- a/main.tex
+++ b/main.tex
@@ -229,7 +229,7 @@ Furthermore, botnets employ a wide variety of fallback mechanisms in the wild.  
 Domain generation algorithms, also known as domain flux and fast flux, grant bots the ability to communicate directly with the central components of a botnet.  However, the critical issue with domain generation algorithms is that the botnet reverts back to a centralized, non-P2P network, meaning that, once again, the network's resilience depends on how long these central resources can last.  In the case of the Torpig botnet, researchers were able to reverse-engineer the fast flux algorithm and take control of the botnet for over ten days\cite{stone:takeover}.  In the case of the Zeus network, the domain generation algorithm has recently been decrypted by a group of researchers; it is possible that, given the predictability of the algorithm, that the domains may be blocked by internet providers before they can be used as a fallback channel\cite{zeus:protocol}.
 
 
-\subsection{Mathematical Underpinning of Botnets}
+\subsection{Metrics for Botnet Resilience}
 
 Researchers have proposed a variety of metrics for quantitatively measuring the robustness and efficiency of botnets.  Both attributes matter from a security perspective: efficient botnets produce less traffic, and therefore go undetected for longer.  The robustness of the network, on the other hand, is the major aim of peer-to-peer network structures such as those implemented for botnets such as Zeus and ZeroAccess.  Botnets routinely gain and lose new members over time; a higher degree of connections between bots provides fault tolerance and recovery, as well as resilience against attacks such as sinkholing\cite{botnet:metrics}.  Dagon et al. proposed a number of metrics for measuring the robustness of a botnet, such as the following:
 
